# Mison

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md  get_codecov.sh  main  main.cc
src/: Bit.cc  Bit.h  type.h
tests/: main-test.cc  test.json  test_Bit.cc
